--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="foodworx">Foodworx</string>
     <string name="pc">PC</string>
     <string name="sixty_four_north">64 North</string>
+    <string name="select_all">Select All</string>
     <string name="button_label">Choose random place to eat</string>
     <string name="chosen_label">Chosen Place:</string>
     <string name="no_places_selected">Please select a place to eat</string>
