Fixed Goody's spelling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="bistro">Bistro</string>
     <string name="sixty_four">64</string>
     <string name="pines">Pines</string>
-    <string name="goodies">Goodies</string>
+    <string name="goodies">Goody\'s</string>
     <string name="ovt">OVT</string>
     <string name="cafe_v">Ventanas</string>
     <string name="cv">CV</string>
